@@ -1,6 +1,8 @@
 23-Sep-2015 Laurent Duflot
 	* BuildSUSYObjects: change isolation WP for photons to Cone20
 	* PhysObjProxyUtils, PhysObjProxyFiller, ZeroLeptonCutVal, cutfile8TeV.dat: change jet pT cut from 40/60 GeV to 50 GeV
+	* ZeroLeptonNTVars, SR & CR, PhysObjProxyUtils: add min dPhi between
+	jets in bad Tile module and MET
 
 22-Sep-2015 Laurent Duflot
 	* INSTALL : update to SUSY,2.3.28, reference release for Oct FAR
